removed redundancies, fixed alignment

--- a/css/net-neutrality-styles.css
+++ b/css/net-neutrality-styles.css
@@ -14,9 +14,9 @@ h1
   font-size: 64px;
 }
 
-.text
+.section
 {
-  text-align: center;
+  text-align:center;
   font-size: 24px;
   width: 75%;
 }
